# groundhog

./: .gitignore  README.md  pyproject.toml  rx_backup.py  stack1k.sh  stack2p5.sh  stack5k.sh
.ipynb_checkpoints/: check_lab_samples-checkpoint.ipynb
control/: Makefile  TSQueue.h  am_radio.py  cmp.py  configure-ublox.sh  generate-filename.py  gps-test.sh  groundhog.cpp  init.sh  plot100k.py  plot_rx.py  quicklook.sh  radar  run-radar.sh  rx.py  rx_backup_backup.py  stack1klowtrig.sh  stack5klowtrig.sh  stack5kmartin.sh
control/flask_gui/: app.py
control/gnss-gui/: index.html  package-lock.json  package.json  vite.config.ts
control/gnssd/: gnssd.py  gnssd.service  socket_client.py  socket_server.py  your_file_name.nav  your_file_name.obs  your_file_name.ubx
control/groundhogd/: groundhogd.py  groundhogd.service
control/gui/: README.md  app.py  index.html  package-lock.json  (+1 more)
docs/: .buildinfo  Makefile  compile.sh  fileFormat.txt  genindex.html  index.html  manual.tex  objects.inv  requirements.txt  search.html  searchindex.js
example/: processor.py
ghog/: __init__.py  checks.py  constants.py  figure.py  filt.py  gain.py  h5io.py  merge_csrs.py  mute.py  nmo.py  read_plot_example.ipynb  restack.py  stolt.py
oneoff/: merge_inreach_gulk24.py
process/: DataViewer.ipynb  animate_tx_rx.py  animate_tx_rx_data.py  build_gps_index.py  file_info.py  gen_tracks.py  ghog2hdf5.py  ghog2sgy.py  h52rsf.py  line_km_calc.py  makeQlook.py  make_gpkg.py  map_qlook.py  merge_csrs.py  plot_radargram.py  proc_h5.py  read_plot_example.ipynb  ruth_proc.py
sphinx/: Makefile
(+69 files in other folders)
